# strava-mcp

./: CONTRIBUTING.md  README-plan.md  README.md  pyproject.toml
docs/: auth.md  platform-integrations.md  setup.md  tools-reference.md
examples/: claude-desktop-config.json  codex-config.toml  hermes-config.yaml  openclaw-config.yaml
src/strava_mcp/: auth.py  cli.py  client.py  config.py  server.py  tools.py
tests/: test_auth_setup.py  test_config.py  test_social_running_tools.py  test_summary.py  test_training_insights.py
